--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <hr class="dibider">
          <h1 class="Title">Jurassic World Dominion 2020 60FPS</h1>
         <h3 class="Genre"> Sci-fi/Action ‧ 2h 27m</h3>
-        <h3 class="Quality">Quality: 360p/ 720p / 1080p</h3>
+        <h3 class="Quality">Quality: 360p/ 720p / 1080p(N/A)</h3>
         <h3 class="Size">Size 2.2gb</h3>
 
     </div>
